--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>CRUD Simple</title>
+  <title>Ejemplo</title>
   <style>
     table, th, td { border: 1px solid black; border-collapse: collapse; }
     th, td { padding: 5px; }
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <h1>CRUD Simple</h1>
+  <h1>CRUD Funcional</h1>
 
 
   <form id="formulario">
