--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Ejemplo</title>
+  <title>CRUD Base</title>
   <style>
     table, th, td { border: 1px solid black; border-collapse: collapse; }
     th, td { padding: 5px; }
@@ -10,8 +10,7 @@
 </head>
 <body>
 
-  <h1>CRUD Funcional</h1>
-
+  <h1>CRUD Base</h1>
 
   <form id="formulario">
     <input type="text" id="nombre" placeholder="Nombre" required>
@@ -30,6 +29,8 @@
     <tbody></tbody>
   </table>
 
-  <script src="crud.js"></script>
+  <script>
+  </script>
+
 </body>
 </html>
