--- a/index.html
+++ b/index.html
@@ -30,27 +30,32 @@
   </table>
 
   <script>
-    function mostrarRegistros() {
-        tabla.innerHTML = "";
-        registros.forEach((registro, index) => {
-        const fila = tabla.insertRow();
-        fila.insertCell(0).innerText = registro.nombre;
-        const celdaAcciones = fila.insertCell(1);
-
-        const btnEliminar = document.createElement("button");
-        btnEliminar.innerText = "Eliminar";
-        btnEliminar.onclick = () => eliminarRegistro(index);
-        celdaAcciones.appendChild(btnEliminar);
-        });
-    }
-
-    function eliminarRegistro(indice) {
-        if (confirm("¿Seguro que quieres eliminar este registro?")) {
-        registros.splice(indice, 1);
-        mostrarRegistros();
-        }
-    }
+    
   </script>
+
+  <script>
+  function mostrarRegistros() {
+    tabla.innerHTML = "";
+    registros.forEach((registro, index) => {
+      const fila = tabla.insertRow();
+      fila.insertCell(0).innerText = registro.nombre;
+      const celdaAcciones = fila.insertCell(1);
+
+      const btnEliminar = document.createElement("button");
+      btnEliminar.innerText = "Eliminar";
+      btnEliminar.onclick = () => eliminarRegistro(index);
+      celdaAcciones.appendChild(btnEliminar);
+    });
+  }
+
+  function eliminarRegistro(indice) {
+    if (confirm("¿Seguro que quieres eliminar este registro?")) {
+      registros.splice(indice, 1);
+      mostrarRegistros();
+    }
+  }
+</script>
+
 
 </body>
 </html>
