--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
   <script>
   </script>
 
+  <script>
+    console.log("Hotfix aplicado: corrección de formato de fecha (simulado)");
+  </script>
+
+
 </body>
 </html>
